Change Introduction text

--- a/app/index.html
+++ b/app/index.html
@@ -63,26 +63,14 @@
 					<div class="about">
 						<h2 class="about-title">Іntroduction</h2>						
 						<img class="about-img" src="./img/pic3.png" alt="photo">												
-						<p class="about-text">The old Soviet healthcare system is a comprehensive system based mainly on three types
-							of hospitals: local, district and republican. Meanwhile, the local and district hospitals were
-							general hospitals with four or five basic departments and some additional specialities; the
-							republican hospitals were mostly mono-profile institutes specialised on certain illnesses.
-							The efficiency of this system is in great need of improvement. The basic concept of hospital care was the idea of ensuring a bed for every patient, indifferent of hospital services.
-							Therefore huge hospitals have been created countrywide with a large bed capacity. The
-							medical services and the related costs didn’t play a prime role. Costs have been covered
-							by the state budget, such as subvention. Because of a lack of competition, the healthcare
-							systems in the former communist countries have lost the affiliation to the development
-							registered in the West-European countries.
-							The modern Western systems are well-structured population- and services-based systems.
-							The efficiency of the services is gaining more and more in importance so that hospitals
-							are forced to supply high-quality services for a payable price.
-							It is obvious, both from a medical point of view as from an economical, that the present
-							the situation needs to be changed.</p>		
+						<p class="about-text">The objective of a HMP is to be a long-term visionary road map for sustainable and equitable health
+							care network and to serve as the key conceptual document to direct future infrastructure
+							investments in the health sector and to provide framework for next phase detailed regional and
+							institutional master plans for the practical implementation of the change. The HMP should will give
+							directions for action in the short (1-3 yrs.), medium (4-6 yrs.) and long-term (7 -15 yrs.) perspective.</p>		
 					</div>						
 				</div>							
 			</section>
-
-
 
 			<section class="analiz-wrapper">
 
