Buttons city style

--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
 				<div class="container">
 					<div class="city-button-container">
 
+					<!--
 						<a class="city-button" href="#" name="Cherkasy">Cherkasy</a>
 						<a class="city-button" href="#" name="Chernihiv">Chernihiv</a>
 						<a class="city-button" href="#" name="Chernivtsi">Chernivtsi</a>
@@ -101,10 +102,14 @@
 						<a class="city-button" href="#" name="Kyiv">Kyiv</a>
 						<a class="city-button" href="#" name="Kropyvnytskyi">Kropyvnytskyi</a>
 						<a class="city-button" href="#" name="Luhansk">Luhansk</a>
+					-->
 						<a class="city-button active" href="#" name="Lviv">Lviv</a>
+					<!--
 						<a class="city-button" href="#" name="Mykolaiv">Mykolaiv</a>
 						<a class="city-button" href="#" name="Odessa">Odessa</a>
+					-->
 						<a class="city-button" href="#" name="Poltava">Poltava</a>
+					<!--
 						<a class="city-button" href="#" name="Rivne">Rivne</a>
 						<a class="city-button" href="#" name="Sumy">Sumy</a>
 						<a class="city-button" href="#" name="Ternopil">Ternopil</a>
@@ -113,11 +118,12 @@
 						<a class="city-button" href="#" name="Uzhhorod">Uzhhorod</a>
 						<a class="city-button" href="#" name="Zaporizhia">Zaporizhia</a>
 						<a class="city-button" href="#" name="Zhytomyr">Zhytomyr</a>
+					-->
 
 					</div>
 
 					<div class="analiz">
-
+					<!--
 						<div class="js-atlas" id="Cherkasy">
 							<h2 class="analiz-title">Cherkasy</h2>							
 						</div>
@@ -154,20 +160,24 @@
 						<div class="js-atlas" id="Luhansk">
 							<h2 class="analiz-title">Luhansk</h2>							
 						</div>
+					-->
 						<div class="js-atlas" id="Lviv">
 							<h2 class="analiz-title">Lviv</h2>
 							<iframe src="http://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 						</div>
+					<!--
 						<div class="js-atlas" id="Mykolaiv">
 							<h2 class="analiz-title">Mykolaiv</h2>							
 						</div>
 						<div class="js-atlas" id="Odessa">
 							<h2 class="analiz-title">Odessa</h2>							
 						</div>
+					-->
 						<div class="js-atlas" id="Poltava">
 							<h2 class="analiz-title">Poltava</h2>
 							<iframe src="http://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 						</div>
+					<!--
 						<div class="js-atlas" id="Rivne">
 							<h2 class="analiz-title">Rivne</h2>							
 						</div>
@@ -192,6 +202,7 @@
 						<div class="js-atlas" id="Zhytomyr">
 							<h2 class="analiz-title">Zhytomyr</h2>							
 						</div>
+					-->
 					</div>
 				</div>
 
@@ -240,7 +251,8 @@
 							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
 							efficient endowment.</p>
 
-						<!-- <h3 class="subtitle reveal-title">Lviv</h3>
+					<!--
+						<h3 class="subtitle reveal-title">Lviv</h3>
 						<div class="panels">
 							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
@@ -318,7 +330,8 @@
 								</div>
 								<h3 class="panel-name">Surgeries</h3>								
 							</a>			
-						</div> -->
+						</div>
+					-->
 					</div>
 				</div>	
 			</section>
