--- a/app/index.html
+++ b/app/index.html
@@ -150,7 +150,7 @@
 						</div>
 					-->
 						<div class="js-atlas" id="Lviv">
-							<h2 class="analiz-title">Lviv</h2>
+							<!-- <h2 class="analiz-title">Lviv</h2> -->
 							<iframe src="http://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 						</div>
 					<!--
@@ -162,7 +162,7 @@
 						</div>
 					-->
 						<div class="js-atlas" id="Poltava">
-							<h2 class="analiz-title">Poltava</h2>
+							<!-- <h4 class="analiz-title">Poltava</h2> -->
 							<iframe src="http://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 						</div>
 					<!--
