lang switch and clean style

--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,7 @@
 		<!-- <link rel="mask-icon" href="./img/icon.svg" color="blue"> -->
 		<link rel="icon" type="image/svg+xml" href="./img/favicon.svg">	
 
-		<link rel="stylesheet" type="text/css" href="./style.css"/>		
-		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="./style.css"/>				
 	</head>
 	
 	<body>	
@@ -41,12 +40,15 @@
 								<span class="item-link">Distances</span>
 							</li>
 
-							<!-- <li class="list-item">
-								<span class="item-link">About</span>								
-							</li> -->
-
 							<li class="list-item">
 								<span class="item-link">Instructions</span>								
+							</li>
+
+							<li class="list-item">
+								<div class="lang-switch-container">
+									<a class="lang-switch active" href="#">EN</a>		
+									<a class="lang-switch" href="#">UA</a>	
+								</div>												
 							</li>
 
 						</ul>
@@ -63,7 +65,7 @@
 					<div class="about">
 						<h2 class="about-title">Іntroduction</h2>						
 						<img class="about-img" src="./img/pic3.png" alt="photo">												
-						<p class="about-text">The objective of a HMP is to be a long-term visionary road map for sustainable and equitable health
+						<p class="text">The objective of a HMP is to be a long-term visionary road map for sustainable and equitable health
 							care network and to serve as the key conceptual document to direct future infrastructure
 							investments in the health sector and to provide framework for next phase detailed regional and
 							institutional master plans for the practical implementation of the change. The HMP should will give
@@ -202,7 +204,7 @@
 				<div class="container">
 					<div class="services">
 						<h2 class="services-title">Hospital Master Plan</h2>
-						<h3 class="check-text text-white">The Hospital Master Plan is a part of the reorganisation of the health
+						<p class="text text-white">The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
 							hospital system.
@@ -210,7 +212,7 @@
 							future-oriented structure.
 							A master plan cannot and should not anticipate or replace detailed studies for each location regarding its individual circumstances and possibilities of development.
 							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
-							efficient endowment.</h3>
+							efficient endowment.</p>
 					</div>
 				</div>
 			</section>
@@ -229,7 +231,7 @@
 				<div class="container">
 					<div class="graphic">
 						<h3 class="graphic-title"><span class="title-text">Analytical tools for HMP</span></h3>
-						<p>The Hospital Master Plan is a part of the reorganisation of the health
+						<p class="text">The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
 							hospital system.
@@ -331,7 +333,7 @@
 				<div class="container">
 					<div class="services">
 						<h2 class="services-title">Hospital Master Plan</h2>
-						<h3 class="check-text text-white">The Hospital Master Plan is a part of the reorganisation of the health
+						<p class="text text-white">The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
 							hospital system.
@@ -339,7 +341,7 @@
 							future-oriented structure.
 							A master plan cannot and should not anticipate or replace detailed studies for each location regarding its individual circumstances and possibilities of development.
 							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
-							efficient endowment.</h3>
+							efficient endowment.</p>
 						
 					</div>
 				</div>
@@ -348,8 +350,8 @@
 			<section class="check-wrapper">
 				<div class="container">
 					<div class="check">					
-						<h2 class="check-title">The Hospital Master Plan</h2>
-						<p class="check-text">The Hospital Master Plan is a part of the reorganisation of the health
+						<h2 class="check-title"><span class="title-text">The Hospital Master Plan</span></h2>
+						<p class="text">The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
 							hospital system.
@@ -359,7 +361,7 @@
 							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
 							efficient endowment.</p>
 						<a class="button lead-button inverted"href="#"><span>Read more</span></a>
-						<a class="button lead-button inverted"href="#"><span>Go ot maps</span></a>
+						<a class="button lead-button inverted"href="#"><span>Go to maps</span></a>
 					</div>	
 				</div>			
 			</section>	
@@ -369,7 +371,7 @@
 				<div class="container">
 					<div class="services">
 						<h2 class="services-title">HMP</h2>
-						<h3 class="check-text text-white">The Hospital Master Plan is a part of the reorganisation of the health
+						<p class="text text-white">The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
 							hospital system.
@@ -377,7 +379,7 @@
 							future-oriented structure.
 							A master plan cannot and should not anticipate or replace detailed studies for each location regarding its individual circumstances and possibilities of development.
 							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
-							efficient endowment.</h3>
+							efficient endowment.</p>
 					</div>
 				</div>
 			</section>
