--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 						<div class="logo-image-container">
 							<img class="logo" src="./img/logo.svg" alt="logo">	
 						</div>
-						<span class="logo-text" data-translatable>HMP Analytical Tool // Інстркументи планування // German // French</span>
+						<span class="logo-text" data-translatable>HMP Analytical Tool // Інструменти планування // German // French</span>
 					</div>
 
 					<nav class="nav">
@@ -46,8 +46,8 @@
 
 							<li class="list-item">
 								<div class="lang-switch-container">
-									<a class="lang-switch js-lang" href="#" name="en-US" data-translatable>EN // EN // EN // EN</a>		
-									<a class="lang-switch js-lang" href="#" name="ua" data-translatable>UA // UA // UA // UA</a>	
+									<a class="lang-switch js-lang" href="#" name="en-US" data-translatable>EN // EN</a>		
+									<a class="lang-switch js-lang" href="#" name="ua" data-translatable>UA // UA</a>	
 								<!--
 									<a class="lang-switch js-lang" href="#" name="de" data-translatable>DE // Нім // DE // DE</a>
 									<a class="lang-switch js-lang" href="#" name="fr" data-translatable>FR // Фран. // FR // FR</a>
