--- a/app/index.html
+++ b/app/index.html
@@ -208,7 +208,7 @@
 				</div>
 				<div class="container">
 					<div class="services">
-						<h2 class="services-title reveal-title" data-translatable>Hospital Master Plan // Українська</h2>
+						<h2 class="services-title reveal-title" data-translatable>Hospital Master Plan // Госпітальний майстер-план</h2>
 						<p class="text text-white reveal" data-translatable>The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
@@ -217,7 +217,9 @@
 							future-oriented structure.
 							A master plan cannot and should not anticipate or replace detailed studies for each location regarding its individual circumstances and possibilities of development.
 							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
-							efficient endowment. // Українська</p>
+							efficient endowment. // Генеральний план мережі лікарень - це частина реорагнізації системи охорони здоров'я Ураїни. Мета майстер-планування - закласти фундамент для наступного сталого розвитку системи 
+							охорони здоров'я, відійшовши від уклдаених принципів показати які зміни необхідно првести щоб в майбутньому отримати міцну і життєздатну систему охорони здоров'я. 
+							Реорганізована система буде гарантувати поліпшений доступ населення до якісних послуг лікарняного обслуговування в однаковому ступені для всіх громадян.</p>
 					</div>
 				</div>
 			</section>
@@ -235,7 +237,7 @@
 			<section class="graphic-wrapper">
 				<div class="container">
 					<div class="graphic">
-						<h3 class="graphic-title reveal-title"><span class="title-text" data-translatable>Analytical tools for HMP // Українська</span></h3>
+						<h3 class="graphic-title reveal-title"><span class="title-text" data-translatable>Analytical tools for HMP // Інструменти для планування</span></h3>
 						<p class="text reveal" data-translatable>The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
@@ -244,7 +246,9 @@
 							future-oriented structure.
 							A master plan cannot and should not anticipate or replace detailed studies for each location regarding its individual circumstances and possibilities of development.
 							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
-							efficient endowment. // Українська</p>
+							efficient endowment. // Генеральний план мережі лікарень - це частина реорагнізації системи охорони здоров'я Ураїни. Мета майстер-планування - закласти фундамент для наступного сталого розвитку системи 
+							охорони здоров'я, відійшовши від уклдаених принципів показати які зміни необхідно првести щоб в майбутньому отримати міцну і життєздатну систему охорони здоров'я. 
+							Реорганізована система буде гарантувати поліпшений доступ населення до якісних послуг лікарняного обслуговування в однаковому ступені для всіх громадян.</p>
 
 					<!--
 						<h3 class="subtitle reveal-title">Lviv</h3>
@@ -337,7 +341,7 @@
 				</div>
 				<div class="container">
 					<div class="services">
-						<h2 class="services-title reveal-title" data-translatable>Hospital Master Plan // Українська</h2>
+						<h2 class="services-title reveal-title" data-translatable>Hospital Master Plan // Генеральний план</h2>
 						<p class="text text-white reveal" data-translatable>The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
@@ -346,7 +350,9 @@
 							future-oriented structure.
 							A master plan cannot and should not anticipate or replace detailed studies for each location regarding its individual circumstances and possibilities of development.
 							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
-							efficient endowment. // Українська</p>
+							efficient endowment. // Генеральний план мережі лікарень - це частина реорагнізації системи охорони здоров'я Ураїни. Мета майстер-планування - закласти фундамент для наступного сталого розвитку системи 
+							охорони здоров'я, відійшовши від уклдаених принципів показати які зміни необхідно првести щоб в майбутньому отримати міцну і життєздатну систему охорони здоров'я. 
+							Реорганізована система буде гарантувати поліпшений доступ населення до якісних послуг лікарняного обслуговування в однаковому ступені для всіх громадян.</p>
 						
 					</div>
 				</div>
@@ -355,7 +361,7 @@
 			<section class="check-wrapper">
 				<div class="container">
 					<div class="check">					
-						<h2 class="check-title reveal-title"><span class="title-text" data-translatable>The Hospital Master Plan // Українська</span></h2>
+						<h2 class="check-title reveal-title"><span class="title-text" data-translatable>The Hospital Master Plan // Генеральний план</span></h2>
 						<p class="text reveal" data-translatable>The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
@@ -364,9 +370,11 @@
 							future-oriented structure.
 							A master plan cannot and should not anticipate or replace detailed studies for each location regarding its individual circumstances and possibilities of development.
 							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
-							efficient endowment. // Українська</p>
-						<a class="button lead-button inverted"href="#"><span data-translatable>Read more // Українська</span></a>
-						<a class="button lead-button inverted"href="#"><span data-translatable>Go to maps // Українська</span></a>
+							efficient endowment. // Генеральний план мережі лікарень - це частина реорагнізації системи охорони здоров'я Ураїни. Мета майстер-планування - закласти фундамент для наступного сталого розвитку системи 
+							охорони здоров'я, відійшовши від уклдаених принципів показати які зміни необхідно првести щоб в майбутньому отримати міцну і життєздатну систему охорони здоров'я. 
+							Реорганізована система буде гарантувати поліпшений доступ населення до якісних послуг лікарняного обслуговування в однаковому ступені для всіх громадян.</p>
+						<a class="button lead-button inverted"href="#"><span data-translatable>Read more // Більше</span></a>
+						<a class="button lead-button inverted"href="#"><span data-translatable>Go to maps // До карт</span></a>
 					</div>	
 				</div>			
 			</section>	
@@ -375,7 +383,7 @@
 				<img class="parallax_scene2" src="./img/3.jpeg" alt="photo">	
 				<div class="container">
 					<div class="services">
-						<h2 class="services-title reveal-title" data-translatable>HMP // Українська</h2>
+						<h2 class="services-title reveal-title" data-translatable>HMP // ГМП</h2>
 						<p class="text text-white reveal" data-translatable>The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
@@ -384,7 +392,9 @@
 							future-oriented structure.
 							A master plan cannot and should not anticipate or replace detailed studies for each location regarding its individual circumstances and possibilities of development.
 							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
-							efficient endowment. // Українська</p>
+							efficient endowment. // Генеральний план мережі лікарень - це частина реорагнізації системи охорони здоров'я Ураїни. Мета майстер-планування - закласти фундамент для наступного сталого розвитку системи 
+							охорони здоров'я, відійшовши від уклдаених принципів показати які зміни необхідно првести щоб в майбутньому отримати міцну і життєздатну систему охорони здоров'я. 
+							Реорганізована система буде гарантувати поліпшений доступ населення до якісних послуг лікарняного обслуговування в однаковому ступені для всіх громадян.</p>
 					</div>
 				</div>
 			</section>
@@ -418,11 +428,11 @@
 			<div class="container">
 				<div class="footer">
 					<div class="copyright">
-						<span data-translatable>Copyright © 2018 Lorem ipsum dolor sit amet. // Українська</span>
+						<span data-translatable>Copyright © 2018 WB Groupe. // Всі права захищено © 2018 Світовий Банк</span>
 					</div>
 					<address>
-						<span class="addr-item" data-translatable>88 Lorem ipsum. 88th Street // Українська</span>
-						<span class="addr-item" data-translatable>Lorem ipsum dolor, Lorem ipsum 88888 // Українська</span>				
+						<span class="addr-item" data-translatable>88 Lorem ipsum. 88th Street // 88 Lorem ipsum. 88th Street</span>
+						<span class="addr-item" data-translatable>Lorem ipsum dolor, Lorem ipsum 88888 // Lorem ipsum dolor, Lorem ipsum 88888</span>				
 					</address>						
 				</div>								
 			</div>
