--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<title>HMP tools</title>
+		<title data-translatable>HMP tools // Інструменти для майстер-планування</title>
 
 		<link rel="icon" type="image/png" href="./img/favicon.png">		
 		<!-- <link rel="mask-icon" href="./img/icon.svg" color="blue"> -->
@@ -209,17 +209,52 @@
 				<div class="container">
 					<div class="services">
 						<h2 class="services-title reveal-title" data-translatable>Hospital Master Plan // Госпітальний майстер-план</h2>
-						<p class="text text-white reveal" data-translatable>The Hospital Master Plan is a part of the reorganisation of the health
-							care system in Ukraine.
-							A Master Plan has the task of setting general conditions for the future development of the
-							hospital system.
-							This means getting away from accepted customs and making the necessary settings for a
-							future-oriented structure.
-							A master plan cannot and should not anticipate or replace detailed studies for each location regarding its individual circumstances and possibilities of development.
-							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
-							efficient endowment. // Генеральний план мережі лікарень - це частина реорагнізації системи охорони здоров'я Ураїни. Мета майстер-планування - закласти фундамент для наступного сталого розвитку системи 
-							охорони здоров'я, відійшовши від уклдаених принципів показати які зміни необхідно првести щоб в майбутньому отримати міцну і життєздатну систему охорони здоров'я. 
-							Реорганізована система буде гарантувати поліпшений доступ населення до якісних послуг лікарняного обслуговування в однаковому ступені для всіх громадян.</p>
+						<p class="text text-white reveal" data-translatable>
+							To provide comprehensive road map for optimization of health care delivery system, the HMP apart to be primarily directed 
+							to rationalization of secondary and tertiary health care delivery system and infrastructure, must offer input of key principles 
+							and guidance for development plans in other areas of health care to be procured and implemented: // 
+							
+							Щоб забезпечити комплексну дорожню карту для оптимізації системи надання медичної допомоги, 
+							HMP має бути спрямований перш за все на раціоналізацію системи та інфраструктури вторинної та 
+							третинної медичної допомоги та запропонувати введення ключових принципів та окреслити плани 
+							розвитку в інших сферах охорони здоров'я:
+						</p>
+							<ul class="text text-white reveal">
+								<li data-translatable>
+									Service model in PHC and securing care integration and continuum between PHC and secondary/tertiary health care. // 
+									Модель обслуговування на первинному рвіні та інтеграція первинної медичної допомоги з вторинною та третинною.
+								</li>
+								<li data-translatable>
+									Ambulance service and medical transport. // 
+									Модель швидкої допомоги та ефективного використання медичного транспорту.
+								</li>
+								<li data-translatable>
+									Models for efficient health care service delivery and financing (i.e. modern day practice clinic, 
+									ambulatory care, day surgery, outpatient services, telemedicine and digital health care services etc.) // 
+									Моделі ефективного надання та фінансування медичних послуг (наприклад, сучасна клінічна практика, амбулаторна допомога, 
+									хірургія одного дня, телемедицина та цифрові медичні послуги тощо).
+								</li>
+								<li data-translatable>
+									Legal status of health care providers and institutional autonomy. // 
+									Правовий статус постачальників послуг охорони здоров'я та інституційна автономія.
+								</li>
+								<li data-translatable>
+									Human resource development and continuous medical education. // 
+									Розвиток людських ресурсів та безперервна медична освіта.
+								</li>
+								<li data-translatable>
+									Medical equipment management and maintenance. // 
+									Адміністрування та підтримка медичного обладнання.
+								</li>
+								<li data-translatable>
+									Health care providers’ reimbursement and motivation system. // 
+									Система відшкодування та мотивації медичних працівників.
+								</li>
+								<li data-translatable>
+									Sustainable framework for capital investments into infrastructure and technology. // 
+									Сталий ракурс капітальних інвестицій в інфраструктуру та технології.
+								</li>
+						    </ul>
 					</div>
 				</div>
 			</section>
