Change one header

--- a/app/index.html
+++ b/app/index.html
@@ -208,7 +208,7 @@
 				</div>
 				<div class="container">
 					<div class="services">
-						<h2 class="services-title reveal-title" data-translatable>Hospital Master Plan // Госпітальний майстер-план</h2>
+						<h2 class="services-title reveal-title" data-translatable>Comprehensive approach to planning // Комплексний підхід до планування</h2>
 						<p class="text text-white reveal" data-translatable>
 							To provide comprehensive road map for optimization of health care delivery system, the HMP apart to be primarily directed 
 							to rationalization of secondary and tertiary health care delivery system and infrastructure, must offer input of key principles 
