--- a/app/index.html
+++ b/app/index.html
@@ -437,13 +437,13 @@
 			
 			<div id="modal-1" style="display:none">
 				<div class="modal-header">
-					<a class="modal-link" href="https://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" target="_blank" data-translatable>View on Full Screen // Українська</a>
+					<a class="modal-link" href="https://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" target="_blank" data-translatable> Lviv report - view on full screen // Львів - дивитись в повноекранному режимі</a>
 				</div>				
 				<iframe src="https://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 			</div>
 			<div id="modal-2" style="display:none">
 				<div class="modal-header">
-					<a class="modal-link" href="https://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" target="_blank" data-translatable>View on Full Screen // Українська</a>
+					<a class="modal-link" href="https://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" target="_blank" data-translatable>Poltava report - view on full screen // Полтава - дивитись в повноекранному режимі</a>
 				</div>
 				<iframe src="https://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 			</div>
