--- a/app/index.html
+++ b/app/index.html
@@ -352,6 +352,52 @@
 				</div>
 			</section>			
 			
+			<section class="instructions-wrapper">
+				<div class="container">
+					<div class="instructions">					
+						<h2 class="instructions-title reveal-title"><span class="title-text" data-translatable>Instructions // Інструкції</span></h2>
+						<div class="instr-scheme">
+							<div class="img-container">
+								<img class="img" src="img/lviv.png" alt="img">
+
+
+								<img class="arrow arrow1" src="img/arrow6.png" alt="">
+								<span class="arrow-text text1">text1</span>
+								<img class="arrow arrow2" src="img/arrow6.png" alt="">
+								<span class="arrow-text text2">text2</span>
+								<img class="arrow arrow3" src="img/arrow6.png" alt="">
+								<span class="arrow-text text3">text3</span>
+								<img class="arrow arrow4" src="img/arrow6.png" alt="">
+								<span class="arrow-text text4">text4</span>
+								<img class="arrow arrow5" src="img/arrow6.png" alt="">
+								<span class="arrow-text text5">text5</span>
+
+								
+
+								<img class="arrow arrow6" src="img/arrow5.png" alt="">
+								<span class="arrow-text text6">text6</span>
+								<img class="arrow arrow7" src="img/arrow5.png" alt="">
+								<span class="arrow-text text7">text7</span>
+
+								<img class="arrow arrow8" src="img/arrow8.png" alt="">
+								<span class="arrow-text text8">text8</span>
+								<img class="arrow arrow9" src="img/arrow8.png" alt="">
+								<span class="arrow-text text9">text9</span>
+
+								<img class="arrow arrow10" src="img/arrow7.png" alt="">
+								<span class="arrow-text text10">text10</span>
+								<img class="arrow arrow11" src="img/arrow7.png" alt="">
+								<span class="arrow-text text11">text11</span>
+								<img class="arrow arrow12" src="img/arrow7.png" alt="">
+								<span class="arrow-text text12">text12</span>
+
+								
+							</div>							
+						</div>						
+					</div>	
+				</div>			
+			</section>
+
 			<section class="check-wrapper">
 				<div class="container">
 					<div class="check">					
