lang map switch

--- a/app/instructions.html
+++ b/app/instructions.html
@@ -185,16 +185,24 @@
 
 			
 			<div id="modal-1" style="display:none">
-				<div class="modal-header">
-					<a class="modal-link" href="https://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" target="_blank" data-translatable> Lviv report - view on full screen // Львів - дивитись в повноекранному режимі</a>
+				<div class="modal-header" data-translatable>
+					<a class="modal-link" href="https://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" target="_blank" >Lviv report - view on full screen</a>
+					<a class="modal-link" href="https://dane-i-analizy.pl/raport/1832-lviv-ua/zobacz/atlas.html" target="_blank" >Львів - дивитись в повноекранному режимі</a>
+				</div>
+				<div data-translatable>				
+					<iframe src="https://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
+					<iframe src="https://dane-i-analizy.pl/raport/1832-lviv-ua/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>					
 				</div>				
-				<iframe src="https://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 			</div>
 			<div id="modal-2" style="display:none">
-				<div class="modal-header">
-					<a class="modal-link" href="https://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" target="_blank" data-translatable>Poltava report - view on full screen // Полтава - дивитись в повноекранному режимі</a>
+				<div class="modal-header" data-translatable>
+					<a class="modal-link" href="https://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" target="_blank">Poltava report - view on full screen</a>
+					<a class="modal-link" href="https://dane-i-analizy.pl/raport/1831-poltava-ua/zobacz/atlas.html" target="_blank">Полтава - дивитись в повноекранному режимі</a>
 				</div>
-				<iframe src="https://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
+				<div data-translatable>
+					<iframe src="https://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
+					<iframe src="https://dane-i-analizy.pl/raport/1831-poltava-ua/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
+				</div>
 			</div>
 
 			<div class="modal">
