add deflang in app.js

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 						<div class="logo-image-container">
 							<img class="logo" src="./img/logo.svg" alt="logo">	
 						</div>
-						<span class="logo-text" data-translatable>HMP Analytical Tool // Інструменти планування // German // French</span>
+						<span class="logo-text" data-translatable>HMP Analytical Tool // Інструменти планування</span>
 					</div>
 
 					<nav class="nav">
