Add some  instructions text

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
 							</li>
 
 							<li class="list-item">
-								<span class="item-link" data-translatable>Distances // Відстані</span>
+								<a class="item-link" data-translatable href="http://ua.dane-i-analizy.pl/" target="_blank">Distances // Відстані</a>
 							</li>
 
 							<li class="list-item">
