add distance image

--- a/app/instructions.html
+++ b/app/instructions.html
@@ -178,39 +178,38 @@ d) Крім того, на карті можна фільтрувати дані
 					<div class="instructions-map">					
 						<h2 class="title reveal-title"><span class="title-text" data-translatable>Illustration // Ілюстрація</span></h2>
 						<div class="instr-scheme">
-							<div class="img-container">
-								<img class="img" src="img/lviv.png" alt="img">
+							<div class="img-container w90">
+								<img class="img" src="img/distance.jpg" alt="img">
 
 
-								<img class="arrow arrow1" src="img/arrow6.png" alt="">
-								<span class="arrow-text text1">text1</span>
-								<img class="arrow arrow2" src="img/arrow6.png" alt="">
-								<span class="arrow-text text2">text2</span>
-								<img class="arrow arrow3" src="img/arrow6.png" alt="">
-								<span class="arrow-text text3">text3</span>
-								<img class="arrow arrow4" src="img/arrow6.png" alt="">
-								<span class="arrow-text text4">text4</span>
-								<img class="arrow arrow5" src="img/arrow6.png" alt="">
-								<span class="arrow-text text5">text5</span>
+								<img class="arrow arrow13" src="img/arrow6.png" alt="">
+								<span class="arrow-text text13">text13</span>
+								<img class="arrow arrow14" src="img/arrow6.png" alt="">
+								<span class="arrow-text text14">text14</span>
+								<img class="arrow arrow15" src="img/arrow6.png" alt="">
+								<span class="arrow-text text15">text15</span>
+								<img class="arrow arrow16" src="img/arrow6.png" alt="">
+								<span class="arrow-text text16">text16</span>
+								<img class="arrow arrow17" src="img/arrow6.png" alt="">
+								<span class="arrow-text text17">text17</span>
+								<img class="arrow arrow18" src="img/arrow6.png" alt="">
+								<span class="arrow-text text18">text18</span>
 
-								
 
-								<img class="arrow arrow6" src="img/arrow5.png" alt="">
-								<span class="arrow-text text6">text6</span>
-								<img class="arrow arrow7" src="img/arrow5.png" alt="">
-								<span class="arrow-text text7">text7</span>
+								<img class="arrow arrow19" src="img/arrow8.png" alt="">
+								<span class="arrow-text text19">text19</span>
+								<img class="arrow arrow20" src="img/arrow8.png" alt="">
+								<span class="arrow-text text20">text20</span>
+								<img class="arrow arrow21" src="img/arrow8.png" alt="">
+								<span class="arrow-text text21">text21</span>
 
-								<img class="arrow arrow8" src="img/arrow8.png" alt="">
-								<span class="arrow-text text8">text8</span>
-								<img class="arrow arrow9" src="img/arrow8.png" alt="">
-								<span class="arrow-text text9">text9</span>
+								<img class="arrow arrow22" src="img/arrow5.png" alt="">
+								<span class="arrow-text text22">text22</span>
+								<img class="arrow arrow23" src="img/arrow5.png" alt="">
+								<span class="arrow-text text23">text23</span>
 
-								<img class="arrow arrow10" src="img/arrow7.png" alt="">
-								<span class="arrow-text text10">text10</span>
-								<img class="arrow arrow11" src="img/arrow7.png" alt="">
-								<span class="arrow-text text11">text11</span>
-								<img class="arrow arrow12" src="img/arrow7.png" alt="">
-								<span class="arrow-text text12">text12</span>
+								<img class="arrow arrow24" src="img/arrow8.png" alt="">
+								<span class="arrow-text text24">text24</span>
 
 								
 							</div>							
