--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
 			<section class="analiz-wrapper">
 
 				<div class="container">
+					<h3 class="section-title reveal-title"><span class="section-title-text" data-translatable>Analytical tools for HMP // Інструменти для планування</span></h3>
 					<div class="city-button-container">
 
 					<!--
@@ -205,6 +206,7 @@
 						</div>
 					-->
 					</div>
+					<a class="full-view-button" id="full-view" data-translatable>View full size // Переглянути в повному розмірі</a>
 				</div>
 
 			</section>	
@@ -278,8 +280,8 @@
 			<section class="graphic-wrapper">
 				<div class="container">
 					<div class="graphic">
-						<h3 class="graphic-title reveal-title"><span class="title-text" data-translatable>Analytical tools for HMP // Інструменти для планування</span></h3>
-						<p class="text reveal" data-translatable>The Hospital Master Plan is a part of the reorganisation of the health
+						<!-- <h3 class="section-title reveal-title"><span class="section-title-text" data-translatable>Analytical tools for HMP // Інструменти для планування</span></h3>
+						<p class="text reveal mgb-100" data-translatable>The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
 							hospital system.
@@ -290,6 +292,9 @@
 							efficient endowment. // Генеральний план мережі лікарень - це частина реорагнізації системи охорони здоров'я Ураїни. Мета майстер-планування - закласти фундамент для наступного сталого розвитку системи 
 							охорони здоров'я, відійшовши від уклдаених принципів показати які зміни необхідно првести щоб в майбутньому отримати міцну і життєздатну систему охорони здоров'я. 
 							Реорганізована система буде гарантувати поліпшений доступ населення до якісних послуг лікарняного обслуговування в однаковому ступені для всіх громадян.</p>
+ -->
+						<h3 class="section-title reveal-title"><span class="section-title-text" data-translatable>Distance measurement tool // Інструменти для вимірювання відстаней</span></h3>
+						<iframe src="http://ua.dane-i-analizy.pl" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 
 					<!--
 						<h3 class="subtitle reveal-title">Lviv</h3>
@@ -372,10 +377,9 @@
 							</a>			
 						</div>
 					-->
-					</div>
+					</div>					
 				</div>	
 			</section>
-						
 
 			<section class="services-wrapper">				
 				<img class="parallax_scene0" src="./img/2.jpg" alt="photo">				
@@ -403,7 +407,7 @@
 			<section class="check-wrapper">
 				<div class="container">
 					<div class="check">					
-						<h2 class="check-title reveal-title"><span class="title-text" data-translatable>The Hospital Master Plan // Генеральний план</span></h2>
+						<h2 class="section-title reveal-title"><span class="section-title-text" data-translatable>The Hospital Master Plan // Генеральний план</span></h2>
 						<p class="text reveal" data-translatable>The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
