--- a/app/instructions.html
+++ b/app/instructions.html
@@ -175,7 +175,7 @@
 								<img class="img" src="img/distance.jpg" alt="img">
 
 
-								<img class="arrow arrow13" src="img/arrow6.png" alt="">
+								<!-- <img class="arrow arrow13" src="img/arrow6.png" alt="">
 								<span class="arrow-text text13" data-translatable>Latitude // Широта</span>
 								<img class="arrow arrow14" src="img/arrow6.png" alt="">
 								<span class="arrow-text text14" data-translatable>Filter A // Фільтр А</span>
@@ -186,14 +186,14 @@
 								<img class="arrow arrow17" src="img/arrow6.png" alt="">
 								<span class="arrow-text text17" data-translatable>Region // Область</span>
 								<img class="arrow arrow18" src="img/arrow6.png" alt="">
-								<span class="arrow-text text18" data-translatable>Filter С // Фільтр С</span>
+								<span class="arrow-text text18" data-translatable>Filter С // Фільтр С</span> -->
 
 
-								<img class="arrow arrow19" src="img/arrow8.png" alt="">
+								<img class="arrow arrow19" src="img/arrow8_gray.png" alt="">
 								<span class="arrow-text text19">text19</span>
-								<img class="arrow arrow20" src="img/arrow8.png" alt="">
+								<img class="arrow arrow20" src="img/arrow8_gray.png" alt="">
 								<span class="arrow-text text20">text20</span>
-								<img class="arrow arrow21" src="img/arrow8.png" alt="">
+								<!-- <img class="arrow arrow21" src="img/arrow8.png" alt="">
 								<span class="arrow-text text21">text21</span>
 
 								<img class="arrow arrow22" src="img/arrow5.png" alt="">
@@ -202,7 +202,7 @@
 								<span class="arrow-text text23">text23</span>
 
 								<img class="arrow arrow24" src="img/arrow8.png" alt="">
-								<span class="arrow-text text24">text24</span>
+								<span class="arrow-text text24">text24</span> -->
 
 								
 							</div>							
