--- a/app/index.html
+++ b/app/index.html
@@ -284,7 +284,7 @@
 							<h3 class="section-title reveal-title"><span class="section-title-text" data-translatable>Distance measurement tool // Інструменти для вимірювання відстаней</span></h3>
 							<iframe src="http://ua.dane-i-analizy.pl" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 						
-						<a class="full-view-button mgt-20" id="full-view" data-translatable>View full size // Переглянути в повному розмірі</a>
+						<a class="full-view-button mgt-20" href="http://ua.dane-i-analizy.pl" target="_blank" data-translatable>View full size // Переглянути в повному розмірі</a>
 					
 						<!--
 							<h3 class="subtitle reveal-title">Lviv</h3>
